--- a/quiz/index.html
+++ b/quiz/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-
+   <link rel="stylesheet" href="style.css">
+    </style>
 </head>
 
 <body>
     <div>
+        <h2>Dinner and where</h2>
         <ul id="demo"></ul>
     </div>
     <script src="main.js"></script>
