:bug: chapter 4 :tv:

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div>
-        <h2>Dinner and where</h2>
+        <h2>Dinner where and when</h2>
         <ul id="demo"></ul>
     </div>
     <script src="main.js"></script>
