:shell: ch 5 objects :ox:

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -15,7 +15,7 @@
         <h2>Dinner where and when</h2>
         <ul id="demo"></ul>
     </div>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
