--- a/quiz/index.html
+++ b/quiz/index.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
-    <div>
+    <div id="starkContainer">
         <h2>Dinner where and when</h2>
-        <ul id="demo"></ul>
+        <!-- <ul id="demo"></ul> -->
     </div>
+    <script src="underscore-min.js"></script>
     <script src="script.js"></script>
 </body>
 
