:bread: class  :tea:

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -11,10 +11,8 @@
 </head>
 
 <body>
-    <div id="starkContainer">
-        <h2>Dinner where and when</h2>
-        <!-- <ul id="demo"></ul> -->
-    </div>
+    <div id="starkContainer"></div>
+    <div id="wonder-woman"></div>
     <script src="underscore-min.js"></script>
     <script src="script.js"></script>
 </body>
