--- a/rainbow.html
+++ b/rainbow.html
@@ -8,7 +8,7 @@
     <script src='https://unpkg.com/babel-standalone@6/babel.min.js'></script>
 </head>
 <body>
-    <button id="btn">click me!</button>
+    <!-- <button id="btn">click me!</button> -->
     <script type='text/babel' src='main.js'></script>
 </body>
 </html>
