--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Justice League</title>
+    
 </head>
 
 <body>
@@ -15,6 +16,7 @@
         <li class='vigilante hero' id='bats'>Batman</li>
         <li class='hero'>Wonder Woman</li>
     </ul>
+    <script src="main.js"></script>
 </body>
 
 </html>
