:sake: DOM :bento:

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Justice League</title>
-    
+    <link rel="stylesheet" href="quiz/style.css">
 </head>
 
 <body>
@@ -16,6 +16,9 @@
         <li class='vigilante hero' id='bats'>Batman</li>
         <li class='hero'>Wonder Woman</li>
     </ul>
+    <!-- // Given the following HTML fragment: -->
+    <div id="divA">This is
+        <span>some</span> text</div>
     <script src="main.js"></script>
 </body>
 
